@@ -3,7 +3,7 @@ module Mail
   module VERSION
     MAJOR = 2
     MINOR = 0
-    TINY  = 3
+    TINY  = 5
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
